--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "axios": "^1.13.2",
     "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
+    "moment": "^2.30.1",
     "react": "^19.2.0",
+    "react-datepicker": "^8.10.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.6"
   },
